# dingtalk_worklog_robot

./: .gitignore  Dockerfile  database.json  docker-compose.yaml  pyproject.toml
log_record/: dingtalk_robot.py  domains.py  main.py  modules.py  repositories.py  secret.py
log_record/api/: core.py  main.py  main_router.py
log_record/api/dependencies/dingtalk/: robot.py  router.py
log_record/api/routers/: robot.py
log_record/app/: main.py
log_record/app/dependencies/: robot.py
log_record/app/routers/: robot.py
log_record/dependencies/: robot.py  secret.py
log_record/routers/: robot.py
tests/: repositories_test.py
